# bl602-wifi-rs

./: Cargo.toml  README.md  flash.bat  make.bat  memory.x  mkbinding.bat  rfparams  rfparams.ld  riscv32imfc-unknown-none-elf.json  run.bat
.cargo/: config
examples/ble_advertising/: main.rs
examples/dhcp/: main.rs  wifi_config.rs
examples/scan/: main.rs
examples/simple/: main.rs  wifi_config.rs
nuttx/: ints.h
nuttx/bl_os_adapter/: bl_os_adapter.h  bl_os_log.h  bl_os_private.h  bl_os_system.h
nuttx/nuttx/net/: netdev.h
nuttx/wifi_driver/: os_hal.h
nuttx/wifi_manager/: bl_wifi.h  wifi_mgmr.h  wifi_mgmr_api.h
nuttx/wifi_manager/include/: bitset.h  wifi_mgmr_ext.h
src/: lib.rs  main.rs  os_adapter.rs  timer.rs  wifi_config.rs
src/binary/: bl_wifi.rs  c_types.rs  mod.rs  wifi_mgmr.rs  wifi_mgmr_api.rs
src/ble/: mod.rs
src/ble/controller/: mod.rs
src/compat/: bl602.rs  circbuf.rs  common.rs  malloc.rs  mod.rs  queue.rs  work_queue.rs
src/log/: mod.rs
src/preemt/: mod.rs
src/wifi/: mod.rs
