[package]
name = "bl602wifi"
version = "0.1.0"
authors = ["bjoern <bjoern.quentin@mobile-j.de>"]
edition = "2018"

[dependencies]
riscv-rt = "0.8.0"
bl602-hal = { git = " https://github.com/sipeed/bl602-hal", rev = "6e823cc0f8dfb997fa4cf8022bcbb1b5a12a65ea" }
#panic-halt = "0.2.0"
riscv =  "0.6.0"
embedded-time = "0.10.1"
nb = "1.0.0"
smoltcp = { version = "0.7.3", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "ethernet"] }

[profile.release]
debug = true

[patch.crates-io]
riscv = { git = "https://github.com/bjoernQ/riscv", branch = "support-ilp32f" }
riscv-rt = { git = "https://github.com/bjoernQ/riscv-rt", branch = "support-ilp32f" }
